# papercast-studio

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  WORKFLOW.md  dev.bat  dev.ps1  pyproject.toml
bootstrap/: build_release.ps1  prepare_libreoffice.ps1
config/: config.example.yaml  secrets.example.env
docs/: CODEMAP.md  FRONTEND.md  HANDOFF_P12.md  HANDOFF_P6.md  HANDOFF_P8.md  PLAN_P10_UX.md  PLAN_P11_BUNDLE.md  PLAN_P2_SERVER.md  PLAN_P4_FRONTEND.md  PLAN_P5_REVIEW.md  PLAN_P5b_REVIEW_REVISION.md  PLAN_P6_USERSERVICE.md  PLAN_P7_REVISIONS.md  PLAN_P8_VOICES.md  PLAN_P9_FIGURES.md  PLAN_WEBUI.md  RELEASE.md  RESEARCH_READING_OPTIMIZATION.md  SERVER_API.md  SMOKE_FIX_PLAN_R1.md  SMOKE_FIX_PLAN_R2.md
papercast/: __init__.py
prompts/: reading.md  regen_reading.md  regen_script.md  regen_slides.md  script.md  slides_plan.md  voice_clone_script.md
reports/: eval_figures.md
scripts/: eval_figures.py  p1_smoke.py
templates/: README.md  lab_template.example.pptx  lab_template.meta.json  lab_template.pptx  lab_template_demo.pptx
tests/: test_author_render.py  test_cli_llm_runners.py  test_composer.py  test_db.py  test_llm_client.py  test_llm_planner.py  test_llm_prompts.py  test_llm_scripter.py  test_llm_tts_normalize.py  test_reader_clusters.py  test_reader_figures.py  test_reader_pdf.py  test_reader_pipeline.py  test_reader_qa.py  test_reader_reading.py  test_review_pack.py  test_scanner.py  test_state.py  test_template_parser.py  test_voice_clone.py  test_voicer.py  test_voicer_minimax.py
webui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+137 files in other folders)
