[project]
name = "papercast"
version = "0.1.0"
description = "Turn a PDF paper into an 8-min lab-share video, end-to-end on Hermes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Garfield-Wuu" }]

dependencies = [
  # CLI
  "typer>=0.12",
  "rich>=13.7",
  # config
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  # PDF & layout
  "pymupdf>=1.24",
  "pdfplumber>=0.11",
  # PPT
  "python-pptx>=0.6.23",
  # http
  "httpx>=0.27",
  # logging
  "structlog>=24.1",
  # tolerant JSON parsing for LLM responses
  "json-repair>=0.30",
]

[project.optional-dependencies]
llm = [
  "anthropic>=0.40",
]
server = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "websockets>=12",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
papercast = "papercast.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["papercast"]

# ---- ruff ----
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # line length handled by formatter

# ---- pytest ----
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

# ---- coverage ----
[tool.coverage.run]
source = ["papercast"]
omit = ["papercast/cli/*"]

# ---- mypy ----
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
